# symstore

./: .coveragerc  .gitignore  .travis.yml  HACKING.md  HACKING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py  test
.github/workflows/: build.yml  tests.yml
symstore/: __init__.py  cab.py  command_line.py  errs.py  fileio.py  logger.py  pdb.py  pe.py  port_pdb.py  symstore.py  version.py
tests/: conf.py  testcase.py
tests/cli/: test_add.py  test_delete.py  test_errs.py  util.py
tests/integration/: test_empty.py  test_read_compressed.py
tests/unit/: test_cab.py  test_command_line.py  test_fileio.py  test_pdb.py  test_pe.py  test_port_pdb.py  test_setup.py  test_symstore.py
tests/unit/data/: no_newline.txt  trailing_newline.txt
